--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <a href="#" class="logo">ADVENTURE</a>
-    <div class="nav-links">
-      <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Adventures</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Infos</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
-    </div>
-    <img src="image/menu-btn.png" alt="menu-burger" class="menu-burger">
-  </nav>
-  <header></header>
+  <header>
+    <nav class="navbar">
+      <a href="#" class="logo">ADVENTURE</a>
+      <div class="nav-links">
+        <ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Adventures</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Infos</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </div>
+      <img src="image/menu-btn.png" alt="menu-burger" class="menu-burger">
+    </nav>
+  </header>
 
 </body>
 
